<resources>
    <string name="app_name">Blood Bank</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyCEh8XUsrTRVkKU0dWlyva9SR6H6YRx8ao</string>
    <string name="phone">phone</string>
    <string name="phone_key">phone:</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">forget password?</string>
    <string name="enter">Enter</string>
    <string name="creat_new_account">Create New Account</string>
    <string name="blood_bank" translatable="false">بنك الدم</string>
    <string name="donation">Donation</string>
    <string name="donations_requests">Donation</string>
    <string name="posts">Posts</string>
    <string name="Press_back_again">Press back again to exit</string>
    <string name="Select_address">Select address</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="invalid_phone">phone number must be 11 number</string>
    <string name="enter_pin_code">enter pin code</string>
    <string name="enter_password">enter password</string>
    <string name="weak_password">password is weak</string>
    <string name="enter_password_confirm">enter password confirmation</string>
    <string name="password_and_confirm_not_match">password and confirm password not match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="user_name">name</string>
    <string name="email">email</string>
    <string name="birthday_date">birthday date</string>
    <string name="blood_type">blood type</string>
    <string name="blood_type_key">blood type:</string>
    <string name="Last_donation_date">Last donation date</string>
    <string name="governorate">governorates</string>
    <string name="city">city</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="slider1">Health is the level of functional and metabolic efficiency of the organism, but for humans,</string>
    <string name="slider2">health is for individuals and societies according to the definition of the World Health Organization in a declaration of the principles of primary health care in 1978.</string>
    <string name="slider3">It is a state of complete physical, mental and social integrity and not merely the absence or absence of disease or disability.</string>
    <string name="send">send</string>
    <string name="code">code</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="change">change</string>
    <string name="home">home</string>
    <string name="user">user</string>
    <string name="call">call</string>
    <string name="notification">notification</string>
    <string name="more">more</string>
    <string name="add_to_favorite" translatable="false">add to favorite</string>
    <string name="title">title</string>
    <string name="background_blood_type" translatable="false">background blood type</string>
    <string name="blood_type_test">B+</string>
    <string name="name_donation_key" >name:</string>
    <string name="name_of_the_user_value" translatable="false">name of the user</string>
    <string name="hospital_donation_key">hospital:</string>
    <string name="city_donation_key">city:</string>
    <string name="name_of_hospital_value">name of hospital</string>
    <string name="name_of_city_value">name of city</string>
    <string name="Please_insert_number">Please insert phone number</string>
    <string name="Please_insert_password">Please insert password</string>
    <string name="last_donation">last donation</string>
    <string name="birthday">birthday</string>
    <string name="search">search</string>
    <string name="sort_by">sort By</string>
    <string name="USER_DATA_SHARED" translatable="false">USER_DATA</string>
    <string name="PHONE_USER_DATA_SHARED" translatable="false">PHONE_USER_DATA</string>
    <string name="categories">categories</string>
    <string name="filter">filter</string>
    <string name="remember_me_instance" translatable="false">REMEMBER</string>
    <string name="favourite">favourite</string>
    <string name="contact_us">contact us</string>
    <string name="about_application">about application</string>
    <string name="rate_application_in_play_store">rate application in play store</string>
    <string name="notification_settings">notification settings</string>
    <string name="logout">logout</string>
    <string name="age">age</string>
    <string name="age_key">age:</string>
    <string name="number_of_bags">number of bags</string>
    <string name="number_of_bags_key">number of bags:</string>
    <string name="hospital_address">hospital address</string>
    <string name="notes">notes</string>
    <string name="donation_request">donation request</string>
    <string name="edit">edit</string>
    <string name="edit_profile">edit profile</string>
    <string name="please_select_the_governorates_and_blood_types">please select the governorates and blood types you want to be notified of their donations via notifications</string>
    <string name="save">save</string>
    <string name="test">test</string>
    <string name="notification_setting">Notification setting</string>
    <string name="exit_app_dialog_msg">Exit from Blood Type?</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="choose_location">choose location</string>
    <string name="address_marker">Address</string>
    <string name="address_key">Address:</string>
    <string name="notification_for_your_request">notification request</string>
    <string name="dummy_date" translatable="false">mon :16/12/2019</string>
    <string name="no_found_notification">no found notification</string>
    <string name="Please_start_saving_humanity_now">Please start saving humanity now</string>
    <string name="subject">subject</string>
    <string name="content">content</string>
    <string name="message">message</string>
    <string name="no_connection">No connection</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="language">language</string>
    <string name="arabic_key">العربية</string>
    <string name="english_key">English</string>
</resources>
