<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/item_rv_posts_iv_image_post"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/code"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <ImageView
        android:id="@+id/item_rv_posts_iv_add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:contentDescription="@string/add_to_favorite"
        android:src="@drawable/circle_with_heart_border" />

    <TextView
        android:id="@+id/item_rv_posts_tv_title_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_title_post"
        android:gravity="center"
        android:hint="@string/title"
        android:padding="@dimen/dim_8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/dim_18sp" />


</com.google.android.material.card.MaterialCardView>