<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dim_8dp"
    android:layout_marginTop="@dimen/dim_4dp"
    android:layout_marginEnd="@dimen/dim_8dp"
    android:layout_marginBottom="@dimen/dim_4dp"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:dragEdge="right"
    app:mode="normal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_rv_donation_img_info"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_info_circle_solid"/>

        <ImageView
            android:id="@+id/item_rv_donation_img_call"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/circle_with_phone_orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/item_rv_donation_blood_type_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_8dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:contentDescription="@string/background_blood_type"
                android:src="@drawable/circle_red">

            </ImageView>

            <TextView
                android:id="@+id/item_rv_donation_blood_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/blood_type_test"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_48sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal"
            android:padding="@dimen/dim_8dp">

            <TextView
                android:id="@+id/item_rv_donation_blood_type_txt_name_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/dim_4dp"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:text="@string/name_donation_key"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_18sp" />

            <TextView
                android:id="@+id/item_rv_donation_blood_type_txt_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:layout_toEndOf="@id/item_rv_donation_blood_type_txt_name_key"
                android:text="@string/name_of_the_user_value"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_18sp" />

            <TextView
                android:id="@+id/item_rv_donation_blood_type_txt_hospital_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_rv_donation_blood_type_txt_name_key"
                android:layout_marginEnd="@dimen/dim_4dp"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:text="@string/hospital_donation_key"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_18sp" />

            <TextView
                android:id="@+id/item_rv_donation_blood_type_txt_hospital_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_rv_donation_blood_type_txt_name_value"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:layout_toEndOf="@id/item_rv_donation_blood_type_txt_hospital_key"
                android:text="@string/name_of_hospital_value"
                android:textColor="@color/black"

                android:textSize="@dimen/dim_18sp" />

            <TextView
                android:id="@+id/item_rv_donation_blood_type_txt_city_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_rv_donation_blood_type_txt_hospital_key"
                android:layout_marginEnd="@dimen/dim_4dp"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_18sp" />

            <TextView
                android:id="@+id/item_rv_donation_blood_type_txt_city_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_rv_donation_blood_type_txt_hospital_value"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:layout_toEndOf="@id/item_rv_donation_blood_type_txt_city_key"
                android:text="@string/name_of_hospital_value"
                android:textColor="@color/black"

                android:textSize="@dimen/dim_18sp" />
        </RelativeLayout>


    </LinearLayout>


</com.chauthai.swipereveallayout.SwipeRevealLayout>