<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/notification_empty_view_fragment_btn_donation"
        style="@style/btn"
        android:layout_width="222dp"
        android:layout_height="@dimen/dim_38dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_16dp"
        android:background="@drawable/background_shape_orange"
        android:layout_below="@id/notification_empty_view_fragment_tv_please"
        android:layout_centerInParent="true"
        android:textSize="@dimen/dim_18sp"
        android:text="@string/donation"/>

    <TextView
        android:id="@+id/notification_empty_view_fragment_tv_no_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_found_notification"
        android:layout_above="@id/notification_empty_view_fragment_tv_please"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"
        android:textSize="@dimen/dim_20sp"
        />

    <TextView
        android:id="@+id/notification_empty_view_fragment_tv_please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Please_start_saving_humanity_now"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_4dp"
        android:layout_marginBottom="@dimen/dim_16dp"
        android:textColor="@color/orange"
        android:textSize="@dimen/dim_20sp"
        />

    <ImageView
        android:id="@+id/notification_empty_view_fragment_iv_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/notification_empty_view_fragment_tv_no_found"
        android:layout_marginBottom="@dimen/dim_38dp"
        android:layout_marginStart="@dimen/dim_64dp"
        android:layout_marginEnd="@dimen/dim_32dp"
        android:src="@drawable/no_notification" />

</RelativeLayout>