<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_login"
    tools:context=".view.fragment.userCycle.LoginFragment"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:alpha="0.1">

    </ImageView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/logo_white">

    </ImageView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_title_phone_number"
        style="@style/text_input"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:errorTextAppearance="@style/error_appearance">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_fragment_txt_phone_number"
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_red"
            android:hint="@string/phone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_title_password"
        style="@style/text_input"
        android:layout_below="@id/login_fragment_title_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:errorTextAppearance="@style/error_appearance">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_fragment_txt_password"
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_outline_red"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/login_edt_password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/password"-->
<!--        android:textColorHint="@color/colorPrimary"-->
<!--        android:background="@drawable/background_edit_text"-->
<!--        android:layout_below="@id/login_fragment_title_phone_number"-->
<!--        android:padding="@dimen/dim_16dp"-->
<!--        android:layout_margin="@dimen/dim_16dp"-->
<!--        />-->
    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_fragment_title_password"
        android:layout_marginTop="@dimen/dim_8dp"
        android:paddingStart="@dimen/dim_16dp"
        android:paddingEnd="@dimen/dim_16dp">
        <CheckBox
            android:id="@+id/login_fragment_ckb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_me"
            android:textColor="@color/white2"
            android:theme="@style/CheckBoxWhite"
            />

        <Button
            android:id="@+id/login_fragment_txt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#00FFFFFF"
            android:text="@string/forget_password"
            android:textColor="@color/white2">

        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/login_fragment_btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_32dp"
        android:layout_below="@id/linear_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_24dp"
        android:paddingStart="@dimen/dim_64dp"
        android:paddingEnd="@dimen/dim_64dp"
        android:background="@drawable/background_edit_text"
        android:text="@string/enter"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-medium">

    </Button>

    <Button
        android:id="@+id/login_fragment_btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white2"
        android:text="@string/creat_new_account"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/dim_16dp"
        android:gravity="center">

    </Button>






</RelativeLayout>