<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_login"
    tools:context=".view.fragment.userCycle.RegisterAsUserFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:background="@drawable/bg">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dim_16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dim_64dp"
                    android:layout_marginTop="@dimen/dim_24dp"
                    android:layout_marginEnd="@dimen/dim_64dp"
                    android:layout_marginBottom="@dimen/dim_16dp"
                    android:text="@string/create_new_account"
                    android:textColor="@color/white2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registers_and_edit_profile_fragment_title_user_name"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@style/error_appearance">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registers_and_edit_profile_fragment_txt_user_name"
                        style="@style/text_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_user_account_box_red"
                        android:hint="@string/user_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registers_and_edit_profile_fragment_email"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@style/error_appearance">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registers_and_edit_profile_fragment_txt_email"
                        style="@style/text_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mail_outline_red"
                        android:hint="@string/email"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/registers_and_edit_profile_fragment_birthday"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date_red"
                    android:drawablePadding="@dimen/dim_8dp"
                    android:focusableInTouchMode="false"
                    android:hint="@string/birthday_date"
                    android:padding="@dimen/dim_16dp">


                </EditText>

                <Spinner
                    android:id="@+id/register_and_edit_profile_fragment_til_sp_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_12dp"
                    android:layout_marginTop="@dimen/dim_4dp"
                    android:layout_marginEnd="@dimen/dim_12dp"
                    android:layout_marginBottom="@dimen/dim_4dp"
                    android:spinnerMode="dropdown"
                    android:overlapAnchor="false"
                    android:background="@drawable/spinner_background" />

                <EditText
                    android:id="@+id/register_edt_Last_donation_d"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date_red"
                    android:drawablePadding="@dimen/dim_8dp"
                    android:focusableInTouchMode="false"
                    android:hint="@string/Last_donation_date"
                    android:inputType="date"
                    android:padding="@dimen/dim_16dp">


                </EditText>


                <Spinner
                    android:id="@+id/register_and_edit_profile_fragment_til_sp_government"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_12dp"
                    android:layout_marginTop="@dimen/dim_4dp"
                    android:layout_marginEnd="@dimen/dim_12dp"
                    android:layout_marginBottom="@dimen/dim_4dp"
                    android:spinnerMode="dropdown"
                    android:overlapAnchor="false"
                    android:background="@drawable/spinner_background" />

                <Spinner
                    android:id="@+id/register_and_edit_profile_fragment_til_sp_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_12dp"
                    android:layout_marginTop="@dimen/dim_4dp"
                    android:layout_marginEnd="@dimen/dim_12dp"
                    android:layout_marginBottom="@dimen/dim_4dp"
                    android:spinnerMode="dropdown"
                    android:overlapAnchor="false"
                    android:background="@drawable/spinner_background" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registers_and_edit_profile_fragment_title_phone_number"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@style/error_appearance">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registers_and_edit_profile_fragment_txt_phone_number"
                        style="@style/text_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_phone_red"
                        android:hint="@string/phone"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registers_and_edit_profile_fragment_title_password"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@style/error_appearance">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registers_and_edit_profile_fragment_txt_password"
                        style="@style/text_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_outline_red"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registers_and_edit_profile_fragment_title_confirm_password"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@style/error_appearance">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registers_and_edit_profile_fragment_txt_confirm_password"
                        style="@style/text_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_outline_red"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registers_and_edit_profile_fragment_btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dim_16dp"
                    android:background="@drawable/background_edittext"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="@dimen/dim_64dp"
                    android:paddingEnd="@dimen/dim_64dp"
                    android:text="@string/register"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>